# financial-simulation

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3d169df5318e_initial.py  40d1d4627854_initial.py
src/: auth_middleware.py  financial_data.py  main.py  models.py
src/components/: modal.wire
src/pages/: __layout__.wire  contributions.wire  globalmarket.wire  index.wire  medicalreceipts.wire  pricing.wire  withdrawals.wire
src/pages/dashboard/: __layout__.wire  index.wire
