[project]
name = "financial-simulation"
version = "0.1.0"
description = "A new pywire application"
requires-python = ">=3.12"
dependencies = [
    "stripe>=7.0.0",
    "sqlalchemy>=2.0.0",
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "fredapi>=0.5.0",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "itsdangerous>=2.0.0",
    "bcrypt>=4.0.0",
    "pywire>=0.11.4",
]

[dependency-groups]
dev = [
    "pywire[cli]",
]
